[gd_scene load_steps=27 format=3 uid="uid://bmivry4uus55u"]

[ext_resource type="Script" path="res://Characters/player.gd" id="1_vbbnd"]
[ext_resource type="Texture2D" uid="uid://co7dr2q8167iy" path="res://Assets/Player/Run.png" id="2_p70ml"]
[ext_resource type="Texture2D" uid="uid://deu73h2ima7ox" path="res://Assets/Player/Weapon.png" id="3_4l3om"]
[ext_resource type="PackedScene" uid="uid://ccukg8pjai65l" path="res://Interfaces/PauseScreen.tscn" id="3_sqnyx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4mkly"]
radius = 14.0
height = 52.0

[sub_resource type="Curve" id="Curve_5imst"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.526316), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_y6bdk"]
curve = SubResource("Curve_5imst")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6xo6j"]
particle_flag_disable_z = true
gravity = Vector3(0, 10, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 20.0
scale_max = 20.0
scale_curve = SubResource("CurveTexture_y6bdk")

[sub_resource type="Curve" id="Curve_3hhnj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7ns8e"]
curve = SubResource("Curve_3hhnj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4q2h3"]
particle_flag_disable_z = true
gravity = Vector3(-8, -5, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_7ns8e")

[sub_resource type="Curve" id="Curve_c744p"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_214gy"]
curve = SubResource("Curve_c744p")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pxxu7"]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 10.0
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 90.0
gravity = Vector3(0, 10, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
angular_velocity_min = 121.26
angular_velocity_max = 121.26
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_214gy")

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_oxnln"]
points = PackedVector2Array(0, 0, 0, -35, 30, -30, 40, 0, 30, 30, 0, 35)

[sub_resource type="CircleShape2D" id="CircleShape2D_u3ceh"]
radius = 61.0082

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yp2u0"]
radius = 18.0
height = 58.0

[sub_resource type="Animation" id="Animation_pl1uw"]
resource_name = "Recover"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1y3k"]
_data = {
"Recover": SubResource("Animation_pl1uw")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kqd18"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2w2ws"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_yf2bm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kqd18")
blend_point_0/pos = 0.6
blend_point_1/node = SubResource("AnimationNodeAnimation_2w2ws")
blend_point_1/pos = 0.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_a06sj"]
graph_offset = Vector2(-496, 118.667)
nodes/BlendSpace1D/node = SubResource("AnimationNodeBlendSpace1D_yf2bm")
nodes/BlendSpace1D/position = Vector2(-240, 186.667)
node_connections = [&"output", 0, &"BlendSpace1D"]

[sub_resource type="Animation" id="Animation_w3brs"]
resource_name = "Run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 10]
}

[sub_resource type="Animation" id="Animation_nyb14"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 0.98), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kdgoh"]
_data = {
"Idle": SubResource("Animation_nyb14"),
"Run": SubResource("Animation_w3brs")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_vbbnd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -26)
shape = SubResource("CapsuleShape2D_4mkly")

[node name="Sprites" type="Node2D" parent="."]
position = Vector2(2.84217e-14, -1.90735e-06)
scale = Vector2(1.01375, 0.986252)

[node name="Sprite" type="Sprite2D" parent="Sprites"]
position = Vector2(2.38419e-07, -26)
scale = Vector2(0.175, 0.166)
texture = ExtResource("2_p70ml")
hframes = 11
frame = 7

[node name="Weapon" type="Sprite2D" parent="Sprites/Sprite"]
position = Vector2(-223.762, 39.7601)
rotation = 2.70299
scale = Vector2(0.388764, 0.374402)
skew = -0.0501275
texture = ExtResource("3_4l3om")

[node name="JumpTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="DashParticle" type="GPUParticles2D" parent="."]
position = Vector2(0, -24)
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_6xo6j")

[node name="RunParticle" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_4q2h3")

[node name="JumpParticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_pxxu7")
lifetime = 0.2
one_shot = true

[node name="Atack" type="Node2D" parent="."]
visible = false

[node name="AtackArea" type="Area2D" parent="Atack"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atack/AtackArea"]
position = Vector2(14, -28)
shape = SubResource("ConvexPolygonShape2D_oxnln")

[node name="Polygon2D" type="Polygon2D" parent="Atack"]
polygon = PackedVector2Array(13, -28, 14, -63, 44, -58, 54, -28, 44, 2, 14, 7)

[node name="SpinAtack" type="Node2D" parent="."]
visible = false

[node name="AtackArea" type="Area2D" parent="SpinAtack"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpinAtack/AtackArea"]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_u3ceh")

[node name="Polygon2D" type="Polygon2D" parent="SpinAtack"]
polygon = PackedVector2Array(0, -85, 15, -83, 31, -77, 44, -67, 54, -54, 59, -39, 61, -24, 59, -7, 53, 7, 43, 20, 30, 29, 15, 36, 0, 36, -16, 34, -31, 29, -44, 19, -53, 7, -59, -7, -61, -24, -58, -40, -53, -54, -43, -67, -31, -77, -15, -83)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -26)
shape = SubResource("CapsuleShape2D_yp2u0")

[node name="RecoverAnimation" type="AnimationPlayer" parent="."]
playback_process_mode = 0
libraries = {
"": SubResource("AnimationLibrary_o1y3k")
}

[node name="PauseScreen" parent="." instance=ExtResource("3_sqnyx")]
visible = false

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_a06sj")
anim_player = NodePath("../SpriteAnimation")
active = true
parameters/BlendSpace1D/blend_position = 0.613883

[node name="SpriteAnimation" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_kdgoh")
}

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
